--- a/client/src/components/Dashboard/Feed/Post/Post.module.css
+++ b/client/src/components/Dashboard/Feed/Post/Post.module.css
@@ -9,7 +9,42 @@
 .post-upper {
   display: flex;
   align-items: center;
+  justify-content: space-between;
   padding-bottom: 10px;
+}
+
+.post-profile-name {
+  display: flex;
+  align-items: center;
+}
+
+.post-menu-button {
+  background-color: transparent;
+  border: none;
+  outline: none;
+  cursor: pointer;
+  color: var(--card-text);
+  padding: 0;
+  height: 24px;
+} 
+
+.post-menu {
+  background-color: transparent;
+  display: flex;
+  align-items: center;
+  position: relative;
+  right: -5px;
+  top: -5px;
+  justify-content: center;
+  border-radius: 50%;
+  width: 30px;
+  height: 30px;
+  transition: 150ms;
+  cursor: pointer;
+}
+
+.post-menu:hover {
+  background-color: var(--settings-hover);
 }
 
 .post-profile-img {
@@ -25,6 +60,7 @@
 .post-name {
   font-weight: 600;
   margin-right: 5px;
+  cursor: pointer;
 }
 
 .post-time {
@@ -39,16 +75,25 @@
 
 .post-body-text {
   font-weight: 400;
-  padding-bottom: 10px;
   margin: 0;
   white-space: pre-wrap;
   color: var(--card-text);
+  width: 100%;
+  cursor: pointer;
+}
+
+.post-read-more-less {
+  font-size: 0.8rem;
+  font-weight: 300;
+  color: var(--post-sub-text);
+  cursor: pointer;
 }
 
 .img-video-wrapper {
   display: flex;
   justify-content: center;
   width: 100%;
+  padding-top: 10px;
 }
 
 .post-img {
@@ -56,6 +101,7 @@
   max-height: 500px;
   object-fit: contain;
   border-radius: 10px;
+  cursor: pointer;
 }
 
 .post-video {
