--- a/client/src/components/Dashboard/Feed/Post/PostModal/PostModal.module.css
+++ b/client/src/components/Dashboard/Feed/Post/PostModal/PostModal.module.css
@@ -26,6 +26,7 @@
   font-weight: 600;
   margin-right: 5px;
   color: var(--card-text);
+  cursor: pointer;
 }
 
 .post-time {
@@ -40,16 +41,24 @@
 
 .post-body-text {
   font-weight: 400;
-  padding-bottom: 10px;
   margin: 0;
   white-space: pre-wrap;
   color: var(--card-text);
+  width: 100%;
+}
+
+.post-read-more-less {
+  font-size: 0.8rem;
+  font-weight: 300;
+  color: var(--post-sub-text);
+  cursor: pointer;
 }
 
 .img-video-wrapper {
   display: flex;
   justify-content: center;
   width: 100%;
+  padding-top: 10px;
 }
 
 .post-img {
@@ -116,7 +125,7 @@
   text-align: center;
   margin: 15px 0 0 0;
   font-size: 0.9rem;
-  background-color:  rgba(255, 99, 71, 0.4);
+  background-color: rgba(255, 99, 71, 0.4);
   border-radius: 10px;
   padding: 10px;
 }
